backup/masterpackage-retrieve/unpackaged/unpackaged/objects/Debit_Order_Initiator__c.object
<CustomObject>
    <fields>
        <fullName>DOI_Contact_Email__c</fullName>
        <label>DOI Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <label>External Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Comms__c</fullName>
        <label>Preferred Comms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CB To Email</fullName>
                </value>
                <value>
                    <fullName>CB to Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Client to Switch</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Debit Order Initiator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DOI_Contact_Email__c</columns>
        <columns>External_Reference_ID__c</columns>
        <columns>Preferred_Comms__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DOI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debit Order Initiators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>